Fix: Made the WorldMap the height of it´s parent on mobile devices

--- a/src/components/Charts/WorldMap/Style.css
+++ b/src/components/Charts/WorldMap/Style.css
@@ -22,3 +22,11 @@
     background-color: #343434;
     border-radius: 10px;
 }
+
+@media screen and (max-width: 768px) {
+    .svgMap-map-wrapper {
+        width: 100%;
+        height: 200px;
+    }
+    
+}
